Fix (AuthController) : Mise a jour des retour d'api
